--- a/client/src/App.css
+++ b/client/src/App.css
@@ -95,7 +95,22 @@ font-size: 2.5em;
     width: 33.3%;
 }
 .commentbtn{
-    
     float: left;
     width: 33.3%;
+}
+.secondary-container{
+    background: rgb(229,210,196);
+    background: linear-gradient(0deg, rgba(229,210,196,1) 0%, rgba(183,110,121,1) 200%);
+    padding: 2em;
+    display: flex;
+    justify-content: center;
+}
+.card-li{
+    display: flex;
+    justify-content: center;
+    padding: 5em;
+}
+.ant-card-body{
+    background: rgb(255,238,240);
+    background: linear-gradient(0deg, rgba(255,238,240,1) 0%, rgba(229,210,196,1) 200%);
 }
