--- a/client/src/App.css
+++ b/client/src/App.css
@@ -228,3 +228,22 @@ h4{
     padding: 1em;
 }
 
+.label-holder {
+    width: 100%;
+    height: 50px;
+    margin-top: 3em;
+    display: grid;
+    place-items: center;
+}
+
+.result {
+    min-height: 100%;
+    max-height: auto;
+    width: 100%;
+    background-color: #E5D2C4;
+    margin-top: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: left;
+}
